<resources>
    <string name="app_name">NoteMii</string>
    <string name="add_note_title">Add Note</string>
    <string name="content">Content...</string>
    <string name="save">Save</string>
    <string name="empty_content">Must fill this field</string>
    <string name="edit_title">Edit note</string>
    <string name="manager_title">Manager Panel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_removed">Note removed successfully</string>
    <string name="note_activity">Notes</string>
    <string name="socket_activity">Connect to server</string>
    <string name="logout">Logout</string>
    <string name="alarm_option">Note with Alarm</string>
    <string name="note_title">Title</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">1 Note Deleted</string>
</resources>
